Fixed an issue where the image was not strecthed on smaller screens

--- a/css/splash.css
+++ b/css/splash.css
@@ -1,5 +1,9 @@
 html {
-  height: 100%;
+  min-height: 100%;
+}
+
+body {
+  min-height: 100%;
 }
 
 .btn-primary {
